tests/NormalTests/paczka1/fuzzy1/23193675.err
Error in line 1: MEDo A647 53,7
Error in line 3: MEDo S982 2,3
Error in line 16: PynT^A468^63,1
Error in line 9: MEDo A468 69,7
Error in line 17: MEDo S776 2,1
Error in line 19: PynT A468 7,6
Error in line 23: PynT S982 90,5
Error in line 26: PynT A647 4,55
Error in line 27: MEDo S982 138,8
Error in line 32: MEDo A468 235,1
